[package]
name = "mdbook-internal"
version = "0.0.1"
edition = "2021"
authors = [
    "Zan Baldwin <hello@zanbaldwin.com>",
    "Razvan Nicolescu <raz@raztech.io",
]
description = "A mdbook preprocessor which parses, and optionally removes, internal sections and/or chapters"
license = "MPL-2.0"
repository = "https://github.com/zanbaldwin/mdbook-internal"


[dependencies]
clap = { version = "4.4", default-features = false }
mdbook = { version = "0.4", default-features = false }
regex = { version = "1.10", default-features = false }
semver = { version = "1.0", default-features = true }
serde_json = { version = "1.0", default-features = false }
# Need to use v0.5.x because that's what mdbook uses.
toml = { version = "0.8", default-features = false }
